# crazys-wm-mod

./: .gitignore  CHANGES.md  CMakeLists.txt  EXE_icon.res  FreeTime.md  JobOtherbuildingImprovmentIdeals.md  PageName.md  Prison.md  ProjectHome.md  README.md  TODO.md  ThingsThatNeedDone.md  config.xml  deps.sh  doc.md
 crazys-wm-mod/: .gitignore  BrothelMaster-vse2013.sln  BrothelMaster-vse2013.vcproj  BrothelMaster-vse2013.vcxproj  BrothelMaster-vse2013.vcxproj.filters  BrothelMaster.sln  BrothelMaster.userprefs  BrothelMaster.vcproj  CGameObject.h  CGraphics.cpp  CGraphics.h  CLog.cpp  CLog.h  CMakeLists.txt  CRenderQue.cpp  CRenderQue.h  CResource.h  CResourceManager.cpp  CSurface.cpp  CSurface.h  CTimer.h  ChangeLog-Mute.txt  Constants.cpp  Constants.h  DirPath.cpp  DirPath.h  FileList.cpp  FileList.h  Found Bugs.txt  GameFlags.cpp  GameFlags.h  Globals.cpp  Globals.h  IconSurface.h  InterfaceGlobals.cpp  InterfaceGlobals.h  InterfaceIDs.h  InterfaceProcesses.cpp  InterfaceProcesses.h  Makefile  (+373 more)
 crazys-wm-mod/Docs&Tools/: Jobs.xlsx
 crazys-wm-mod/Docs&Tools/New Resolution Generator/: NewRes.py
 crazys-wm-mod/Resources/: !0 Itemsx-contents.txt  !0 girlsx-contents.txt  !0 rgirlsx-contents.txt
 crazys-wm-mod/Resources/Characters/: China Dress.rgirlsx  randoms.rgirlsx  test3.girlsx
 crazys-wm-mod/Resources/Data/: CoreTraits.traits  CoreTraits.traitsx  Modifiers.xml  RivalGangFirstNames.txt  config.xml
 crazys-wm-mod/Resources/Interface/: dungeon_screen.xml
 crazys-wm-mod/Resources/Items/: 150 Piece Drum Kit.itemsx  AIDS Cure.itemsx  Adamantine arm fetter.itemsx  Adamantine leg fetter.itemsx  Adorable Underwear.itemsx  Amazing Boob Job.itemsx  Amulet of Fleshy Softness.itemsx  Amulet of Incest.itemsx  Amulet of Life.itemsx  Amulet of the Sex Elemental.itemsx  Android, Combat MK II.itemsx  Android, Sex MK II.itemsx  Android, Sex MK III.itemsx  Aoshima BEEF!!.itemsx  Apron.itemsx  Arcane Club.itemsx  Arcane Glove.itemsx  Archmage Staff.itemsx  Armor of the Battlemaiden.itemsx  Armor of the Berserk.itemsx  Armor of the Lost.itemsx  Asexual Armlet.itemsx  Attitude Reajustor.itemsx  Bad Nurse Costume.itemsx  Bag of Magic Dry Water.itemsx  Bag of Magic S.F..itemsx  Basic Makeup.itemsx  Battle Axe.itemsx  Bayonetta's Heels.itemsx  Bestial Ring.itemsx  Better Zed than Dead.itemsx  Bimbo Liqueur.itemsx  Bimbo Ring.itemsx  Black String Bikini.itemsx  Blonde Ring.itemsx  Bloomers.itemsx  Blue Steel Fan.itemsx  Bodice Knife.itemsx  Boob Job.itemsx  Boob reduction A.itemsx  (+390 more)
 crazys-wm-mod/Resources/Scripts/: API.lua  CustNoPay.script  DefaultInteractDetails.script  Dungeon.lua  GirlLostGamble.lua  GlobalTriggers.xml  Intro.lua  MeetArenaTry.script.intro  MeetCastingTry.lua  MeetCastingTry.script  MeetClinicTry.lua  MeetClinicTry.script  MeetTownDefault.lua  MeetTownDefault.script  NoMoney.lua  RivalLose.lua  SexText.lua  TalkDetailsDefault.lua  _api.lua
 crazys-wm-mod/Saves/: Test.gam  autosave.gam  b.gam
 crazys-wm-mod/WMEdit/: .gitignore  WM Girls Generator.userprefs
 crazys-wm-mod/WMEdit/WM Girls Generator/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  WM Girls Generator.csproj  tBoxEvnt.cs
 crazys-wm-mod/src/: CMakeLists.txt  Game.cpp  Game.hpp  IBuilding.cpp  IBuilding.hpp  Inventory.cpp  Inventory.hpp  cShop.cpp  cShop.h  gang_missions.cpp  sGirl.cpp  sGirl.hpp  sStorage.cpp  sStorage.hpp
 crazys-wm-mod/src/buildings/: cArena.cpp  cArena.h  cBrothel.cpp  cBrothel.h  cCentre.cpp  cCentre.h  cClinic.cpp  cClinic.h  cDungeon.cpp  cDungeon.h  cFarm.cpp  cFarm.h  cHouse.cpp  cHouse.h  cMovieStudio.cpp  cMovieStudio.h  queries.cpp  queries.hpp
 crazys-wm-mod/src/engine/: CLog.cpp  CMakeLists.txt  DirPath.cpp  DirPath.h  FileList.cpp  FileList.h  Revision.h  SDL_anigif.c  SDL_anigif.h  linux.h  sConfig.cpp  sConfig.h
 crazys-wm-mod/src/game/: CMakeLists.txt  Constants.h  Game.cpp  Game.hpp  IBuilding.cpp  IBuilding.hpp  InterfaceGlobals.cpp  InterfaceProcesses.cpp  Inventory.cpp  MasterFile.h  XmlMisc.cpp  XmlMisc.h  cEvents.cpp  cEvents.h  cGameSettings.h  cGangs.cpp  cGangs.h  cGirlGangFight.cpp  cGirlGangFight.h  cGirlTorture.cpp  cGirlTorture.h  cGirls.cpp  cGirls.h  cGold.cpp  cGold.h  cInventory.cpp  cInventory.h  cJobManager.cpp  cJobManager.h  cNameList.cpp  cNameList.h  cObjectiveManager.cpp  cObjectiveManager.hpp  cRandomGirl.cpp  cRandomGirl.h  cRival.cpp  cRival.h  cRng.cpp  cRng.h  cShop.cpp  (+10 more)
 crazys-wm-mod/src/interface/: CGraphics.cpp  CGraphics.h  cAnimatedSurface.h  cChoiceMessage.cpp  cChoiceMessage.h  cColor.cpp  cColor.h  cFont.cpp  cFont.h  cImageCache.cpp  cImageCache.hpp  cInterfaceObject.h  cInterfaceWindow.cpp  cInterfaceWindow.h  cMessageBox.cpp  cMessageBox.h  cSurface.cpp  cSurface.h  cTimer.h  cWindowManager.cpp  cWindowManager.h  fwd.hpp
 crazys-wm-mod/src/jobs/: WorkAdvertising.cpp  WorkArenaJousting.cpp  WorkArenaMagicDual.cpp  WorkArenaRacing.cpp  WorkBaker.cpp  WorkBarCook.cpp  WorkBarPiano.cpp  WorkBarSinger.cpp  WorkBarStripper.cpp  WorkBarWaitress.cpp  WorkBarWhore.cpp  WorkBarmaid.cpp  WorkBeastCapture.cpp  WorkBeastCare.cpp  WorkBlacksmith.cpp  WorkBoobJob.cpp  WorkBreastReduction.cpp  WorkBrewer.cpp  WorkBrothelMassusse.cpp  WorkBrothelStripper.cpp  WorkBrothelWhore.cpp  WorkButcher.cpp  WorkCameraMage.cpp  WorkCatacombRancher.cpp  WorkCentreAngerManagement.cpp  WorkCentreExTherapy.cpp  WorkCentreManager.cpp  (+101 more)
src/engine/: CLog.cpp  CMakeLists.txt  DirPath.cpp  FileList.cpp  FileList.h  SDL_anigif.h  cRng.cpp  sConfig.cpp  unittest.cpp
src/game/: CMakeLists.txt  Constants.cpp  Constants.h  Game.cpp  Game.hpp  IBuilding.cpp  IBuilding.hpp  IGame.cpp  IGame.h  InterfaceGlobals.cpp  InterfaceProcesses.cpp  InterfaceProcesses.h  Inventory.cpp  Inventory.hpp  MasterFile.h  SavesList.cpp  SavesList.h  XmlMisc.cpp  XmlMisc.h  cEvents.cpp  cEvents.h  cGame.cpp  cGame.h  cGameSettings.cpp  cGameSettings.h  cGangManager.cpp  cGangManager.hpp  cGangs.cpp  cGangs.h  cGirlGangFight.cpp  cGirlGangFight.h  cGirlTorture.cpp  cGirlTorture.h  cGirls.cpp  cGirls.h  cGirlsTests.cpp  cGold.cpp  cGold.h  cInventory.cpp  cInventory.h  (+28 more)
(+3159 files in other folders)
