cmake_minimum_required(VERSION 3.10)

set(SRC
    cAnimatedSurface.cpp
    cArena.cpp
    cArenaScreen.cpp
    cArenaTry.cpp
    cAuctionScreen.cpp
    cBrothel.cpp
    cBuilding.cpp
    cButton.cpp
    cCastingTry.cpp
    cCentre.cpp
    cCentreScreen.cpp
    cCheckBox.cpp
    cChoiceMessage.cpp
    cClinic.cpp
    cClinicScreen.cpp
    cClinicTry.cpp
    cColor.cpp
    cCustomers.cpp
    cDungeon.cpp
    cEditBox.cpp
    cEvents.cpp
    cFarm.cpp
    cFarmScreen.cpp
    cFont.cpp
    CGameObject.cpp
    cGameScript.cpp
    cGangs.cpp
    cGetStringScreenManager.cpp
    cGirlGangFight.cpp
    cGirls.cpp
    cGirlTorture.cpp
    cGold.cpp
    CGraphics.cpp
    cHouse.cpp
    cHouseScreen.cpp
    cImageItem.cpp
    cInterfaceWindow.cpp
    cInventory.cpp
    cInventoryManagementSM.cpp
    cJobManager.cpp
    cListBox.cpp
    CLog.cpp
    cLuaMenu.cpp
    cLuaScript.cpp
    cMessageBox.cpp
    cMovieStudio.cpp
    cNameList.cpp
    cPlayer.cpp
    CRenderQue.cpp
    CResourceManager.cpp
    cRival.cpp
    cRng.cpp
    cScreenArena.cpp
    cScreenArenaManagement.cpp
    cScreenArenaTry.cpp
    cScreenAuction.cpp
    cScreenBank.cpp
    cScreenBrothelManagement.cpp
    cScreenBuildingManagement.cpp
    cScreenBuildingSetup.cpp
    cScreenCastingTry.cpp
    cScreenCentre.cpp
    cScreenCentreManagement.cpp
    cScreenClinic.cpp
    cScreenClinicManagement.cpp
    cScreenClinicTry.cpp
    cScreenDungeon.cpp
    cScreenFarm.cpp
    cScreenFarmManagement.cpp
    cScreenGallery.cpp
    cScreenGangs.cpp
    cScreenGetInput.cpp
    cScreenGirlDetails.cpp
    cScreenGirlManagement.cpp
    cScreenHouse.cpp
    cScreenHouseDetails.cpp
    cScreenHouseManagement.cpp
    cScreenItemManagement.cpp
    cScreenMainMenu.cpp
    cScreenMayor.cpp
    cScreenMovie.cpp
    cScreenMovieMaker.cpp
    cScreenNewGame.cpp
    cScreenPreparingGame.cpp
    cScreenPrison.cpp
    cScreenPropertyManagement.cpp
    cScreenSettings.cpp
    cScreenSlaveMarket.cpp
    cScreenStudioManagement.cpp
    cScreenTown.cpp
    cScreenTransfer.cpp
    cScreenTurnSummary.cpp
    cScriptManager.cpp
    cScripts.cpp
    cScriptUtils.cpp
    cScrollBar.cpp
    cSlider.cpp
    CSurface.cpp
    cTariff.cpp
    cTextItem.cpp
    cTrainable.cpp
    cTraits.cpp
    cTriggers.cpp
    cWindowManager.cpp
    DirPath.cpp
    FileList.cpp
    GameFlags.cpp
    Globals.cpp
    InterfaceGlobals.cpp
    InterfaceProcesses.cpp
    main.cpp
    sConfig.cpp
    sFacility.cpp
    sFacilityList.cpp
    strnatcmp.cpp
    tinystr.cpp
    tinyxml.cpp
    tinyxmlerror.cpp
    tinyxmlparser.cpp
    WorkAdvertising.cpp
    WorkArenaJousting.cpp
    WorkArenaMagicDual.cpp
    WorkArenaRacing.cpp
    WorkBaker.cpp
    WorkBarCook.cpp
    WorkBarmaid.cpp
    WorkBarPiano.cpp
    WorkBarSinger.cpp
    WorkBarStripper.cpp
    WorkBarWaitress.cpp
    WorkBarWhore.cpp
    WorkBeastCapture.cpp
    WorkBeastCare.cpp
    WorkBlacksmith.cpp
    WorkBoobJob.cpp
    WorkBreastReduction.cpp
    WorkBrewer.cpp
    WorkBrothelMassusse.cpp
    WorkBrothelStripper.cpp
    WorkBrothelWhore.cpp
    WorkButcher.cpp
    WorkCameraMage.cpp
    WorkCatacombRancher.cpp
    WorkCentreAngerManagement.cpp
    WorkCentreExTherapy.cpp
    WorkCentreManager.cpp
    WorkCentreTherapy.cpp
    WorkChairMan.cpp
    WorkCityGuard.cpp
    WorkCleanArena.cpp
    WorkCleanCentre.cpp
    WorkCleanHouse.cpp
    WorkCleaning.cpp
    WorkCobbler.cpp
    WorkCombatTraining.cpp
    WorkComunityService.cpp
    WorkCosmeticSurgery.cpp
    WorkCounselor.cpp
    WorkCrystalPurifier.cpp
    WorkCureDiseases.cpp
    WorkCustService.cpp
    WorkDoctor.cpp
    WorkDoctore.cpp
    WorkEscort.cpp
    WorkExploreCatacombs.cpp
    WorkFakeOrgasm.cpp
    WorkFarmer.cpp
    WorkFarmHand.cpp
    WorkFarmManager.cpp
    WorkFarmMarketer.cpp
    WorkFarmPonyGirl.cpp
    WorkFarmResearch.cpp
    WorkFarmVeterinarian.cpp
    WorkFeedPoor.cpp
    WorkFightArenaGirls.cpp
    WorkFightBeast.cpp
    WorkFilmAction.cpp
    WorkFilmAnal.cpp
    WorkFilmBeast.cpp
    WorkFilmBondage.cpp
    WorkFilmBuk.cpp
    WorkFilmChef.cpp
    WorkFilmDirector.cpp
    WorkFilmDominatrix.cpp
    WorkFilmFootJob.cpp
    WorkFilmGroup.cpp
    WorkFilmHandJob.cpp
    WorkFilmLesbian.cpp
    WorkFilmMast.cpp
    WorkFilmMusic.cpp
    WorkFilmOral.cpp
    WorkFilmPromoter.cpp
    WorkFilmPublicBDSM.cpp
    WorkFilmRandom.cpp
    WorkFilmSex.cpp
    WorkFilmStagehand.cpp
    WorkFilmStrip.cpp
    WorkFilmTease.cpp
    WorkFilmThroat.cpp
    WorkFilmTitty.cpp
    WorkFluffer.cpp
    WorkFreetime.cpp
    WorkGardener.cpp
    WorkGetAbort.cpp
    WorkGetAssJob.cpp
    WorkGetFacelift.cpp
    WorkGetFertility.cpp
    WorkGetTubesTied.cpp
    WorkGetVaginalRejuvenation.cpp
    WorkHallDealer.cpp
    WorkHallEntertainer.cpp
    WorkHallWhore.cpp
    WorkHallXXXEntertainer.cpp
    WorkHeadGirl.cpp
    WorkHealing.cpp
    WorkHouseCook.cpp
    WorkHousePet.cpp
    WorkHouseVacation.cpp
    WorkIntern.cpp
    WorkJanitor.cpp
    WorkJeweler.cpp
    WorkLiposuction.cpp
    WorkMakeItem.cpp
    WorkMakePotions.cpp
    WorkMatron.cpp
    WorkMechanic.cpp
    WorkMilk.cpp
    WorkMilker.cpp
    WorkNurse.cpp
    WorkPeepShow.cpp
    WorkPersonalBedWarmer.cpp
    WorkPersonalTraining.cpp
    WorkPhysicalSurgery.cpp
    WorkRancher.cpp
    WorkRecruiter.cpp
    WorkRehab.cpp
    WorkRepairShop.cpp
    WorkSecurity.cpp
    WorkSheapherd.cpp
    WorkShepherd.cpp
    WorkSleazyBarmaid.cpp
    WorkSleazyWaitress.cpp
    WorkSOBisexual.cpp
    WorkSOLesbian.cpp
    WorkSOStraight.cpp
    WorkTailor.cpp
    WorkTorturer.cpp
    XmlMisc.cpp
    XmlUtil.cpp
    SDL_anigif.c

    cAnimatedSurface.h
    cArena.h
    cArenaScreen.h
    cArenaTry.h
    cAuctionScreen.h
    cBrothel.h
    cBuilding.h
    cButton.h
    cCastingTry.h
    cCentre.h
    cCentreScreen.h
    cCheckBox.h
    cChoiceMessage.h
    cClinic.h
    cClinicScreen.h
    cClinicTry.h
    cColor.h
    cCustomers.h
    cDungeon.h
    cEditBox.h
    Centre.h
    cEvents.h
    cFarm.h
    cFarmScreen.h
    cFont.h
    CGameObject.h
    cGameScript.h
    cGangs.h
    cGetStringScreenManager.h
    cGirlGangFight.h
    cGirls.h
    cGirlTorture.h
    cGold.h
    CGraphics.h
    cHouse.h
    cHouseScreen.h
    cImageItem.h
    cInterfaceEvent.h
    cInterfaceObject.h
    cInterfaceWindow.h
        cInventory.h
    cInventoryManagementSM.h
    cJobManager.h
    cJobs.h
    cListBox.h
    CLog.h
    cLuaMenu.h
    cLuaScript.h
    cMessageBox.h
    cMovieScreen.h
    cMovieStudio.h
    cNameList.h
    Constants.h
    cPlayer.h
    CRenderQue.h
    CResource.h
    CResourceManager.h
    cRival.h
    cRng.h
    cScreenArena.h
    cScreenArenaManagement.h
    cScreenArenaTry.h
    cScreenAuction.h
    cScreenBank.h
    cScreenBrothelManagement.h
    cScreenBuildingManagement.h
    cScreenBuildingSetup.h
    cScreenCastingTry.h
    cScreenCentre.h
    cScreenCentreManagement.h
    cScreenClinic.h
    cScreenClinicManagement.h
    cScreenClinicTry.h
    cScreenDungeon.h
    cScreenFarm.h
    cScreenFarmManagement.h
    cScreenGallery.h
    cScreenGangs.h
    cScreenGetInput.h
    cScreenGirlDetails.h
    cScreenGirlManagement.h
    cScreenHouseDetails.h
    cScreenHouse.h
    cScreenHouseManagement.h
    cScreenItemManagement.h
    cScreenMainMenu.h
    cScreenMayor.h
    cScreenMovie.h
    cScreenMovieMaker.h
    cScreenNewGame.h
    cScreenPreparingGame.h
    cScreenPrison.h
    cScreenPropertyManagement.h
    cScreenSettings.h
    cScreenSlaveMarket.h
    cScreenStudioManagement.h
    cScreenTown.h
    cScreenTransfer.h
    cScreenTurnSummary.h
    cScriptManager.h
    cScripts.h
    cScriptUtils.h
    cScrollBar.h
    cSlider.h
    CSurface.h
    cTariff.h
    cTextItem.h
    CTimer.h
    cTrainable.h
        cTraits.h
    cTriggers.h
    cWindowManager.h
    cXmlWidget.h
    DirPath.h
    FileList.h
    GameFlags.h
    GameSystem.h
    Globals.h
    GraphicsSystem.h
    IconSurface.h
    InterfaceGlobals.h
    InterfaceIDs.h
    InterfaceProcesses.h
    libintl.h
    linux.h
    main.h
    MasterFile.h
    resource.h
    Revision.h
    sConfig.h
    SDL_anigif.h
    SDLStuff.h
    sFacility.h
    sFacilityList.h
    strnatcmp.h
    tinystr.h
    tinyxml.h
    XmlMisc.h
    XmlUtil.h)

# build own lua
add_library(lua lua/src/lapi.h
        lua/src/print.c
        lua/src/lzio.h
        lua/src/lzio.c
        lua/src/lvm.h
        lua/src/lvm.c
        lua/src/lundump.h
        lua/src/lundump.c
        lua/src/lualib.h
        lua/src/luaconf.h
        lua/src/lua.h
        lua/src/lua.c
        lua/src/ltm.h
        lua/src/ltm.c
        lua/src/ltablib.c
        lua/src/ltable.h
        lua/src/ltable.c
        lua/src/lstrlib.c
        lua/src/lstring.h
        lua/src/lstring.c
        lua/src/lstate.h
        lua/src/lstate.c
        lua/src/lparser.h
        lua/src/lparser.c
        lua/src/loslib.c
        lua/src/lopcodes.h
        lua/src/lopcodes.c
        lua/src/lobject.h
        lua/src/lobject.c
        lua/src/loadlib.c
        lua/src/lmem.h
        lua/src/lmem.c
        lua/src/lmathlib.c
        lua/src/llimits.h
        lua/src/llex.h
        lua/src/llex.c
        lua/src/liolib.c
        lua/src/linit.c
        lua/src/lgc.h
        lua/src/lgc.c
        lua/src/lfunc.c
        lua/src/lfunc.h
        lua/src/ldump.c
        lua/src/ldo.h
        lua/src/ldo.c
        lua/src/ldebug.h
        lua/src/ldebug.c
        lua/src/ldblib.c
        lua/src/lcode.c
        lua/src/lcode.h
        lua/src/lbaselib.c
        lua/src/lauxlib.h
        lua/src/lauxlib.c
        lua/src/lapi.c
        lua/src/lapi.h)

target_include_directories(lua PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/lua/src)

# make imported targets for SDL
find_package(SDL 1.2)
add_library(SDL INTERFACE)
target_link_libraries(SDL INTERFACE ${SDL_LIBRARY})
target_include_directories(SDL INTERFACE ${SDL_INCLUDE_DIR})

find_package(SDL_image 1.2 REQUIRED)
add_library(SDL_image INTERFACE)
target_link_libraries(SDL_image INTERFACE ${SDL_IMAGE_LIBRARIES} )
target_include_directories(SDL INTERFACE ${SDL_IMAGE_INCLUDE_DIRS})

find_package(SDL_ttf 2.0 REQUIRED)
add_library(SDL_ttf INTERFACE)
target_link_libraries(SDL INTERFACE ${SDL_TTF_LIBRARIES})
target_include_directories(SDL_ttf INTERFACE ${SDL_TTF_INCLUDE_DIRS})

# there is no find_package(SDL_gfx), unfortunately.
add_executable(WhoreMaster ${SRC})
target_link_libraries(WhoreMaster SDL SDL_gfx SDL_ttf lua SDL_image)
set_target_properties(WhoreMaster PROPERTIES CXX_STANDARD 11)

if (UNIX)
    target_compile_definitions(WhoreMaster PUBLIC LINUX=1)
endif(UNIX)

# libsdl-ttf2.0-dev
